Initial reconfiguration as non-academic site

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,5 +1,5 @@
-$serif: merriweather, serif;
-$sans: "gotham ssm a", "gotham ssm b", $local_sans;
+$serif: "Merriweather", serif;
+$sans: "Merriweather Sans", sans-serif;
 
 html {
   font-family: $serif;
