--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,15 +3,9 @@
 
     <title>John Wilmes{% if page.title != "About" %} | {{ page.title }}{% endif %}</title>
 
-    <link rel="icon" type="image/x-icon" href="{{ "/favicon.ico" | relative_url}}" />
     <link rel="stylesheet" type="text/css" href="{{ "/theme/main.css" | relative_url }}" />
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,700" rel="stylesheet">
-{% if jekyll.environment == "production" -%}
-    <link href="https://cloud.typography.com/6833514/7761552/css/fonts.css" rel="stylesheet"/>
-    <link href="//www.brandeis.edu/_files/css/fonts.css" rel="stylesheet"/>
-{% endif -%}
-    <script type="text/javascript"
-	    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500&family=Merriweather:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 </head>
 <head>
